Actions
Bug #10747
closedtimod: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/timod.c: In function 'timodrproc': ../../common/io/timod.c:930:27: error: comparison between pointer and integer [-Werror] if (tp->tim_mymaxlen != NULL) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 5300f7b31236679926392a1a0539c44241b251e6
commit 5300f7b31236679926392a1a0539c44241b251e6 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:26:40.000Z 10747 timod: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions